Fix header to not using the correct height on mobile display

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -159,7 +159,7 @@
 
 @media (max-width: 450px) {
   .mainHeader {
-    padding: 0 8px;
+    padding: 16px;
 
     .content {
       gap: 0;
